fix the upload product  and the contrast issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -98,10 +98,10 @@
 }
 
 input[checked] ~ label {
-  @apply bg-blue-500 border-t-2;
+  @apply bg-blue-700 border-t-2;
 }
 .color input[checked] ~ label {
-  @apply border-t-2 border-t-blue-500;
+  @apply border-t-2 border-t-blue-700;
 }
 input[type="radio"] {
   display: none;
@@ -168,5 +168,5 @@ button[role="radio"] {
   object-fit: cover;
 }
 .swiper-pagination-bullets .swiper-pagination-bullet-active {
-  @apply bg-blue-500;
+  @apply bg-blue-700;
 }
